# bar-3d-prints

./: .gitignore  LICENSE  README.md  barprint.config.example.json  pyproject.toml
barprint/: __init__.py  bar_assets.py  blender_runner.py  cli.py  compare_viewer.py  config.py  coordinate_transforms.py  icons.py  pose_profiles.py  s3o_bounds.py
barprint/blender/: bar_to_print_blender.py
barprint/profiles/: bot_large.json  bot_small.json  building.json  raptor_biped.json  raptor_multileg.json  tick.json  turret.json  vehicle_tank.json
docs/: advanced.md  development.md  usage.md
tests/: test_bar_assets.py  test_blender_runner.py  test_cli.py  test_compare_viewer.py  test_config.py  test_coordinate_transforms.py  test_export_audit.py  test_icons.py  test_integration_blender.py  test_pose_profiles.py  test_s3o_bounds.py
